--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,20 @@ jobs:
       - name: Run Tests
         run: |
           go test -v ./... 
+      
+      - name: Tag Repo
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{secrets.TAGGING_PAT}}
+          custom_tag: ${{steps.semver.outputs.version_tag}}
+          tag_prefix: ""
+
+      - name: Publish Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TAGGING_PAT }}
+        with:
+          tag_name: ${{ steps.semver.outputs.version_tag }}
+          release_name: ${{ steps.semver.outputs.version_tag }}
+          draft: false
+          prerelease: false
