--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,20 +33,16 @@ jobs:
       - name: Run Tests
         run: |
           go test -v ./... 
-      
-      - name: Tag Repo
-        uses: mathieudutour/github-tag-action@v6.1
-        with:
-          github_token: ${{secrets.TAGGING_PAT}}
-          custom_tag: ${{steps.semver.outputs.version_tag}}
-          tag_prefix: ""
 
-      - name: Publish Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.TAGGING_PAT }}
+      - uses: actions/checkout@v4
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
         with:
-          tag_name: ${{ steps.semver.outputs.version_tag }}
-          release_name: ${{ steps.semver.outputs.version_tag }}
-          draft: false
-          prerelease: false
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
